--- a/templates/admin_layout.html.twig
+++ b/templates/admin_layout.html.twig
@@ -7,6 +7,7 @@
 			<link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" type="text/css" />
 			<script src="{{ asset('js/jquery.js') }}"></script>
 			<script src="{{ asset('js/bootstrap.js') }}"></script>
+			<script src="{{ asset('app.js') }}"></script>
 			<style>
 				.carousel-inner > .item > img,
 				.carousel-inner > .item > a > img
@@ -16,6 +17,15 @@
 				}
 			</style>
 		{% endblock %}
+
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+		{% endblock %}
+
+		{% block javascripts %}
+			{{ encore_entry_script_tags('app') }}
+		{% endblock %}
+
 	</head>
 	
 	{% block body %}
@@ -33,19 +43,28 @@
 						  <a class="navbar-brand" href="#">FormArmor</a>
 						</div>
 						<ul class="nav navbar-nav">
-						<li id='menu1' class="dropdown">
-								<a class="dropdown-toggle" data-toggle="dropdown" href="#">Gestion des clients
-								<span class="caret"></span></a>
+							<li id='menu1' class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Gestion des clients
+										<span class="caret"></span>
+									</a>
 									<ul class="dropdown-menu">
 										<li><a href="{{path('register') }}">Nouveau client</a></li>
 										<li><a href="{{ path('adminClientListe') }}">Modif/Suppression client</a></li>
 									</ul>
 							</li>
-						  <li id='menu2'><a href="{{ path('adminStatutListe') }}">Statut</a></li>
-						  <li id='menu3'><a href="{{ path('adminFormationListe') }}">Formation</a></li>
-						  <li id='menu4'><a href="{{ path('adminSessionListe') }}">Session</a></li>
-						  <li id='menu5'><a href="{{ path('adminPlanListe') }}">Plan de formation</a></li>
-						  <li id='menu6'><a href="{{ path('logout') }}">D&eacute;connexion</a></li>
+							<li id='menu2'><a href="{{ path('adminStatutListe') }}">Statut</a></li>
+							<li id='menu3'><a href="{{ path('adminFormationListe') }}">Formation</a></li>
+							<li id='menu4'><a href="{{ path('adminSessionListe') }}">Session</a></li>
+							<li id='menu5' class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown" href="#">Plan de formation
+									<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+									<li><a href="{{ path('adminPlanAjout')}}">Nouveau plan de formation</a></li>
+									<li><a href="{{ path('adminPlanListe')}}">Modif/Suppression plan de formation</a></li>
+								</ul>
+							</li>
+							<li id='menu6'><a href="{{ path('logout') }}">D&eacute;connexion</a></li>
 						</ul>
 					  </div>
 					</nav>
